--- a/firstproject/src/main/resources/templates/articles/show.mustache
+++ b/firstproject/src/main/resources/templates/articles/show.mustache
@@ -22,4 +22,6 @@
     <a href="/articles/{{article.id}}/delete" class="btn btn-danger">Delete</a>
     <a href="/articles">Go to articles list</a>
 
+    {{>comment/_comment}}
+
 {{>layouts/footer}}Z
